Add basic structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>xLexip</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <figure class="item">
+        <img src="res/L.png" width="250px" height="250px"/>
+        <figcaption class="headline">@xLexip</figcaption>
+    </figure>
+</body>
