--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>xLexip</title>
 
+    <link rel="icon" type="image/png" href="res/favicon.png"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
