--- a/projects/ota-updater/index.html
+++ b/projects/ota-updater/index.html
@@ -223,7 +223,7 @@ if (!doNotTrack) {
   <a class="prev" href="/projects/pe/">
     <span class="title">« Prev Page</span>
     <br>
-    <span>Pixel Experience: Android 12 &amp; 11 for the OnePlus 5 and 5T</span>
+    <span>Stable Android 12 for the OnePlus 5 and 5T - Pixel Experience Custom ROM</span>
   </a>
   <a class="next" href="/projects/downbloats/">
     <span class="title">Next Page »</span>
