--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
 <title>Lexip&#39;s Blog (xLexip)</title>
-<meta name="keywords" content="lexip, xlexip, development, github, android, linux, xda, java, python, pixelexperience, blog, portfolio" />
-<meta name="description" content="Heyo, welcome to the blog of xLexip. :]">
+<meta name="keywords" content="lexip, xlexip, development, github, android, linux, xda, java, python, pixelexperience, blog, portfolio, android 12, rom, pixel experience, git, lexipctrl" />
+<meta name="description" content="The Android Development Blog of xLexip.">
 <meta name="author" content="xLexip">
 <link rel="canonical" href="/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.4bcc85d53b4b9120a7da561a0087fe5d33d59027dadc5a0babea4ae95de75161.css" integrity="sha256-S8yF1TtLkSCn2lYaAIf&#43;XTPVkCfa3FoLq&#43;pK6V3nUWE=" rel="preload stylesheet" as="style">
@@ -35,13 +35,13 @@ if (!doNotTrack) {
 }
 </script>
 <meta property="og:title" content="Lexip&#39;s Blog (xLexip)" />
-<meta property="og:description" content="Heyo, welcome to the blog of xLexip. :]" />
+<meta property="og:description" content="The Android Development Blog of xLexip." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" /><meta property="og:site_name" content="Lexip&#39;s Blog (xLexip)" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Lexip&#39;s Blog (xLexip)"/>
-<meta name="twitter:description" content="Heyo, welcome to the blog of xLexip. :]"/>
+<meta name="twitter:description" content="The Android Development Blog of xLexip."/>
 
 <script type="application/ld+json">
 {
@@ -49,7 +49,7 @@ if (!doNotTrack) {
   "@type": "Organization",
   "name": "Lexip's Blog (xLexip)",
   "url": "",
-  "description": "Heyo, welcome to the blog of xLexip. :]",
+  "description": "The Android Development Blog of xLexip.",
   "thumbnailUrl": "https://lexip.dev/res/favicon.ico",
   "sameAs": [
       "/git", "/tgc", "/d", "/xda"
@@ -93,8 +93,8 @@ if (!doNotTrack) {
 <main class="main"><div class="profile">
     <div class="profile_inner"><img src="http://lexip.dev/res/favicon.png" alt="Logo"
             height="230" width="230" />
-        <h1>Hey there! :]</h1>
-        <span></span><div class="social-icons">
+        <h1>Lexip&rsquo;s Blog</h1>
+        <span>This is mainly about Android Development. Enjoy! (:</span><div class="social-icons">
     <a href="/git" target="_blank" rel="noopener noreferrer me" title="Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
